--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,18 +1,15 @@
 .profile {
-    max-width: 880px;
-    margin: 40px auto 50px;
-    padding: 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
+    margin-top: 38px;
+    margin-bottom: 37px;
+    flex-direction: column;
     align-items: center;
   }
   
-  @media (max-width: 930px) {
+  @media screen and (min-width: 1024px) {
     .profile {
-      flex-direction: column;
-      margin: 42px auto 36px;
+      justify-content: space-between;
+      flex-direction: row;
+      margin-bottom: 49px;
     }
   }
