--- a/blocks/popup/__bth-save/popup__bth-save.css
+++ b/blocks/popup/__bth-save/popup__bth-save.css
@@ -4,7 +4,7 @@
   line-height: 22px;
   width: 100%;
   height: 50px;
-  margin: 0 auto 25px;
+  margin-top: 20px;
   border-radius: 2px;
   background-color: #000000;
   color: white;
@@ -18,7 +18,7 @@
     line-height: 17px;
     width: 100%;
     height: 46px;
-    margin: 0 22px 25px;
+    margin: 0;
   }
 }
 
