--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,15 +1,16 @@
-.profile__avatar{
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    background-size: cover;
-    background-position: center;
-    margin: 0 30px 0 0;
-    padding: 0;
+.profile__avatar {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background-size: cover;
+  background-position: center;
+  margin: 0 30px 0 0;
+  padding: 0;
+  object-fit: cover;
 }
 
 @media (max-width: 930px) {
-    .profile__avatar{
-        margin: 0 auto 26px;
-    }
+  .profile__avatar {
+    margin: 0 auto 26px;
+  }
 }
