--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,15 +1,18 @@
 .profile {
-    display: flex;
-    margin-top: 38px;
-    margin-bottom: 37px;
+  max-width: 880px;
+  margin: 40px auto 50px;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+@media (max-width: 930px) {
+  .profile {
     flex-direction: column;
-    align-items: center;
+    margin: 42px auto 36px;
   }
-  
-  @media screen and (min-width: 1024px) {
-    .profile {
-      justify-content: space-between;
-      flex-direction: row;
-      margin-bottom: 49px;
-    }
-  }
+}
