--- a/pages/index.css
+++ b/pages/index.css
@@ -21,6 +21,7 @@
 @import url(../blocks/gallery/__info/gallery__info.css);
 @import url(../blocks/gallery/__location/gallery__location.css);
 @import url(../blocks/gallery/__like/gallery__like.css);
+@import url(../blocks/gallery/__like/_active/gallery__like_active.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
