--- a/blocks/popup/__btn-save/popup__btn-save.css
+++ b/blocks/popup/__btn-save/popup__btn-save.css
@@ -3,24 +3,24 @@
   font-size: 18px;
   line-height: 22px;
   width: 100%;
-  height: 50px;
-  margin-top: 20px;
+  margin: 18px auto;
   border-radius: 2px;
   background-color: #000000;
   color: white;
   border: none;
-  padding: 0;
+  padding: 12px 0;
 }
 
 @media (max-width: 600px) {
   .popup__btn-save {
     font-size: 14px;
-    line-height: 17px;
+    line-height: 20px;
     width: 100%;
-    height: 46px;
-    margin: 0;
+    margin: 15px auto;
+    padding: 12px 0;
   }
 }
+
 
 .popup__btn-save:hover {
   opacity: 0.8;
