--- a/blocks/profile/__btn-edit/profile__btn-edit.css
+++ b/blocks/profile/__btn-edit/profile__btn-edit.css
@@ -8,6 +8,7 @@
   background-position: center;
   border: 1px solid #FFFFFF;
   margin-top: 8px;
+  flex-shrink: 0;
 }
 
 .profile__btn-edit:hover {
@@ -21,6 +22,6 @@
     width: 18px;
     margin-top: 2px;
     background-size: 7.5px;
-    margin-right: 72px;
+    margin-right: 17px;
   }
 }
