--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,9 +1,11 @@
-.profile__info{
-    max-width: 60%;
+.profile__info {
+  max-width: 60%;
+  gap: 14px 9px;
 }
 
-@media (max-width: 700px){
-    .profile__info{
-        max-width: 100%;
-    }
+@media (max-width: 700px) {
+  .profile__info {
+    max-width: 282px;
+
+  }
 }
