--- a/blocks/popup/__btn-save/popup__btn-save.css
+++ b/blocks/popup/__btn-save/popup__btn-save.css
@@ -2,25 +2,25 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  width: 100%;
-  margin: 18px auto;
+  width: 358px;
+  height: 50px;
+  margin: 0 36px 37px;
   border-radius: 2px;
   background-color: #000000;
   color: white;
   border: none;
-  padding: 12px 0;
+  padding: 0;
 }
 
 @media (max-width: 600px) {
   .popup__btn-save {
     font-size: 14px;
-    line-height: 20px;
-    width: 100%;
-    margin: 15px auto;
-    padding: 12px 0;
+    line-height: 17px;
+    width: 238px;
+    height: 46px;
+    margin: 0 22px 25px;
   }
 }
-
 
 .popup__btn-save:hover {
   opacity: 0.8;
